2014-08-14  William A. Perkins  <william.perkins@pnnl.gov>

	* test/transport/1d-analytic-1blk: make parallel and change
	picture to use gage data

	* test/transport/pointsource: make parallel and update so pictures
	can be made from CGNS output

	* test/transport/mixing: make parallel and update so pictures can
	be made from CGNS output

2014-06-30  William A. Perkins  <william.perkins@pnnl.gov>

	* bed.f90 (bed_particulate_exchange, bed_sediment_exchange): only
	report negative values when they are "bad"

2014-06-17  William A. Perkins  <william.perkins@pnnl.gov>

	* mass2_parallel.f90 (output): only print the scalar mass balance
	if there is one

2014-06-16  William A. Perkins  <william.perkins@pnnl.gov>

	* scalar_solve.f90 (transport_precalc): call to bedshear() no
	longer necessary 

	* bed.f90 (bed_initialize): remove extraneous put

	* hydro_solve.f90 (hydro): call block_hydro_update_bc() which
	contains all the stuff that used to be here

	* block_hydro_bc.f90 (block_hydro_update_bc): add routine that
	collects necessary tasks to prepare for a hydro iteration (BC,
	dead cells, etc.)

2014-06-13  William A. Perkins  <william.perkins@pnnl.gov>

	* plot_cgns.f90 (plot_cgns_write): used wrong index for collecting
	particulate 

	* bed_var.f90 (bed_var_allocate): initialize %slices

	* bed_functions.f90 (bed_post_timestep): use bed_put()

	* bed.f90 (bed_put): put pore flux for all species

	* gage_output_module.f90 (gage_print_text): particulate bed mass
	was incorrect

2014-06-10  William A. Perkins  <william.perkins@pnnl.gov>

	* scalar_solve.f90 (transport_precalc): need to compute bedshear

	* plot_cgns.f90 (plot_cgns_write): output some bed variables; more
	needed 

	* particulate_source.f90 (part_bed_exch, part_dissolve_bed_exch):
	enable the old calculations

	* mass2_parallel.f90 (update): turn bed accounting back on

	* hydro_solve.f90: add some GA after gets

	* hotstart.f90: add some GA after gets
